--- a/check.html
+++ b/check.html
@@ -47,10 +47,19 @@
                 <div>
                     <img src="433x433-square.png" style="width: 75%;"></img>
                 </div>
-                <div style="padding: 20px 00px;"><a href="diagnosis.html"><button class="btn px-00-50 text-white"
-                            style="padding: 20px; font-size: 150%;">Upload
-                            Image</button></a>
+                <div style="padding: 30px 00px;">
+                    <input id="input" hidden type="file" />
+                    <label for="input" class="btn px-00-50 text-white" style="padding: 20px 118px ; font-size: 150%;">
+                        Upload Your
+                        Image</label>
                 </div>
+                <div style="padding: 10px 00px;">
+                    <a href="diagnosis.html">
+                        <button class="btn px-00-50 text-white" style="padding: 20px; font-size: 150%;">Check Diagnosis
+                        </button>
+                    </a>
+                </div>
+
             </div>
             <div class="column">
                 <div>
