functionality to upload an image from any location on device, and display it on the webpage

--- a/check.html
+++ b/check.html
@@ -47,12 +47,13 @@
                 <div>
                     <img src="433x433-square.png" style="width: 75%;"></img>
                 </div>
-                <div style="padding: 30px 00px;">
+                <div id="file-uploader" style="padding: 30px 00px;">
                     <input id="input" hidden type="file" />
                     <label for="input" class="btn px-00-50 text-white" style="padding: 20px 118px ; font-size: 150%;">
                         Upload Your
                         Image</label>
                 </div>
+                <script src="image-handler.js"></script>
                 <div style="padding: 10px 00px;">
                     <a href="diagnosis.html">
                         <button class="btn px-00-50 text-white" style="padding: 20px; font-size: 150%;">Check Diagnosis
