added boarder to all imgs, and added reference square images for users to use as a guide when uploading picture

--- a/check.html
+++ b/check.html
@@ -23,7 +23,7 @@
 <body class="bg-light-blue-100">
     <header class="accent text-white">
         <div>
-            <h1 class="item-center inline-block px-00-50">💅🏽 Nail Techs</h1>
+            <h1 class="item-center inline-block px-00-50">Nail Techs</h1>
         </div>
 
         <div class="bg-light-blue-100">
@@ -45,7 +45,7 @@
                     Check Your Nails
                 </h2>
                 <div>
-                    <img src="433x433-square.png" style="width: 75%;"></img>
+                    <img src="images/433x433-square.png" style="width: 75%;"></img>
                 </div>
                 <div id="file-uploader" style="padding: 30px 00px;">
                     <input id="input" hidden type="file" />
@@ -70,13 +70,13 @@
                     <br />
                     <div class="flex row" style="text-align: center;">
                         <div class="column-3">
-                            <img src="433x433-square.png" style="width: 55%;"></img>
+                            <img src="images/nail1.jpeg" style="width: 55%;"></img>
                         </div>
                         <div class="column-3">
-                            <img src="433x433-square.png" style="width: 55%;"></img>
+                            <img src="images/nail2.jpeg" style="width: 55%;"></img>
                         </div>
                         <div class="column-3">
-                            <img src="433x433-square.png" style="width: 55%;"></img>
+                            <img src="images/nail3.jpeg" style="width: 55%;"></img>
                         </div>
                     </div>
 
