--- a/diagnosis.html
+++ b/diagnosis.html
@@ -23,7 +23,7 @@
 <body class="bg-light-blue-100">
     <header class="accent text-white">
         <div>
-            <h1 class="item-center inline-block px-00-50">💅🏽 Nail Techs</h1>
+            <h1 class="item-center inline-block px-00-50">Nail Techs</h1>
         </div>
 
         <div class="bg-light-blue-100">
@@ -45,7 +45,7 @@
                     Diagnosis
                 </h2>
                 <div>
-                    <img src="433x433-square.png" style="width: 75%;"></img>
+                    <img src="images/433x433-square.png" style="width: 75%;"></img>
                 </div>
                 <div class="px-20-00"><button class="btn  px-00-50 text-white"
                         style="padding: 20px; font-size: 150%;">Diagnosis #1</button>
