--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
 <body class="bg-light-blue-100">
     <header class="accent text-white">
         <div>
-            <h1 class="item-center inline-block px-00-50">💅🏽 Nail Techs</h1>
+            <h1 class="item-center inline-block px-00-50">Nail Techs</h1>
         </div>
 
         <div class="bg-light-blue-100">
