improved btn responsiveness

--- a/check.html
+++ b/check.html
@@ -47,11 +47,11 @@
                 <div>
                     <img src="images/433x433-square.png" style="width: 75%;"></img>
                 </div>
-                <div id="file-uploader" style="padding: 30px 00px;">
+                <div id="file-uploader" class="btn text-white"
+                    style="font-size: 150%; padding: 20px 00px; text-align: center; margin-top: 10px;">
                     <input id="input" hidden type="file" />
-                    <label for="input" class="btn px-00-50 text-white" style="padding: 20px 118px ; font-size: 150%;">
-                        Upload Your
-                        Image</label>
+                    <label for="input" class="px-00-50; justify-content: center;">
+                        Upload Your Image</label>
                 </div>
                 <script src="image-handler.js"></script>
                 <div style="padding: 10px 00px;">
